implementations/rust/ockam/ockam/tests/node_test/fail_if_function_is_not_async.stderr
error: the `async` keyword is missing from the function declaration
 --> tests/node_test/fail_if_function_is_not_async.rs:2:1
  |
2 | fn my_test(c: &mut ockam_node::Context) -> ockam_core::Result<()> {
  | ^^
