implementations/rust/ockam/ockam/tests/node_test/fail_if_function_is_not_async.rs
#[ockam::test]
fn my_test(c: &mut ockam_node::Context) -> ockam_core::Result<()> {
    c.stop().await.unwrap();
}

fn main() {}
